@@ -1,5 +1,10 @@
 2015-01-15  Jiong Wang  <jiong.wang@arm.com>
 
+	* expmed.c (store_bit_field_using_insv): Improve warning message.
+	Use %wu instead of HOST_WIDE_INT_PRINT_UNSIGNED.
+
+2015-01-15  Jiong Wang  <jiong.wang@arm.com>
+
 	PR rtl-optimization/64011
 	* expmed.c (store_bit_field_using_insv): Warn and truncate bitsize when
 	there is partial overflow.
